Fix Docusaurus deploy config

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "predeploy": "npm run build",
+    "deploy": "GIT_USER=shanthsm USE_SSH=true docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
